Fix sidebar menu overlapping logout
#114

--- a/assets/sass/common/_icons.sass
+++ b/assets/sass/common/_icons.sass
@@ -36,22 +36,6 @@
   margin: 14px 0px 0px 8px
   color: $success-color
 
-//side menu bar
-
-.left-sidebar
-  .left-tray-title-icon
-    margin: 15px 10px 0 15px
-
-  .left-tray-menu-icon
-    margin: 12px 10px 0 15px
-
-  .current
-    .left-tray-menu-icon
-      margin: 7px 10px 0 15px
-
-  .left-tray-icon
-    font-size: 24px
-
 .top-bar-icon
   float: left
   font-size: 20px
